--- a/covid19-api/_animation.scss
+++ b/covid19-api/_animation.scss
@@ -1,3 +1,18 @@
 .search-result.show {
   display: block;
 }
+
+.show.fade-in {
+  animation: appear 1s ease-in-out;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
