--- a/covid19-api/styles.css
+++ b/covid19-api/styles.css
@@ -17,6 +17,20 @@ body {
   display: block;
 }
 
+.show.fade-in {
+  animation: appear 1s ease-in-out;
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 /* Search Icon */
 .search-button {
   outline: none;
