--- a/covid19-api/_animation.scss
+++ b/covid19-api/_animation.scss
@@ -16,3 +16,46 @@
     transform: translateY(0px);
   }
 }
+
+.error-animation {
+  animation: shake .5s .25s;
+
+  input {
+    color: #fff;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0px);
+    timing-function: ease-in;
+  }
+  37% {
+    transform: translateX(5px);
+    timing-function: ease-out;
+  }
+  55% {
+    transform: translateX(-5px);
+    timing-function: ease-in;
+  }
+  73% {
+    transform: translateX(4px);
+    timing-function: ease-out;
+  }
+  82% {
+    transform: translateX(-4px);
+    timing-function: ease-in;
+  }
+  91% {
+    transform: translateX(2px);
+    timing-function: ease-out;
+  }
+  96% {
+    transform: translateX(-2px);
+    timing-function: ease-in;
+  }
+  100% {
+    transform: translateX(0px);
+    timing-function: ease-in;
+  }
+}
