--- a/covid19-api/styles.css
+++ b/covid19-api/styles.css
@@ -27,6 +27,11 @@ h3, h5 {
   border-color: #452fff;
 }
 
+.error {
+  color: #fc2828;
+  margin: 1rem;
+}
+
 body {
   text-align: center;
 }
@@ -66,6 +71,55 @@ h6 {
   margin: 0 auto;
 }
 
+@media (min-width: 770px) {
+  main {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+
+  .main-container {
+    display: grid;
+    grid-template-columns: 1fr 300px;
+  }
+
+  .error {
+    grid-column: 1/2;
+  }
+
+  .search-container {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+
+  .show.search-result {
+    grid-column: 1/2;
+    grid-row: 3/span 3;
+    max-width: none;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: none;
+  }
+
+  .searches-container {
+    grid-column: 2/3;
+    grid-row: 1/span 3;
+  }
+
+  .world-result {
+    grid-column: 2/3;
+    grid-row: 4;
+  }
+
+  .container {
+    margin: 15px;
+  }
+
+  #search-data-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    border: 3px solid #1100a1;
+  }
+}
 .search-result.show {
   display: block;
 }
@@ -82,6 +136,47 @@ h6 {
   100% {
     opacity: 1;
     transform: translateY(0px);
+  }
+}
+.error-animation {
+  animation: shake 0.5s 0.25s;
+}
+.error-animation input {
+  color: #fff;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0px);
+    timing-function: ease-in;
+  }
+  37% {
+    transform: translateX(5px);
+    timing-function: ease-out;
+  }
+  55% {
+    transform: translateX(-5px);
+    timing-function: ease-in;
+  }
+  73% {
+    transform: translateX(4px);
+    timing-function: ease-out;
+  }
+  82% {
+    transform: translateX(-4px);
+    timing-function: ease-in;
+  }
+  91% {
+    transform: translateX(2px);
+    timing-function: ease-out;
+  }
+  96% {
+    transform: translateX(-2px);
+    timing-function: ease-in;
+  }
+  100% {
+    transform: translateX(0px);
+    timing-function: ease-in;
   }
 }
 h1 {
@@ -110,6 +205,11 @@ h3, h5 {
 .new-recovered .data, .total-recovered .data {
   background: #452fff;
   border-color: #452fff;
+}
+
+.error {
+  color: #fc2828;
+  margin: 1rem;
 }
 
 /* Search Icon */
